--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.myapplication">
+    package="com.example.myapplication" >
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/zonepark_asset"
         android:label="ZonePark"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication">
+        android:theme="@style/Theme.MyApplication" >
+        <activity
+            android:name=".User.Mall_page"
+            android:exported="false" />
         <activity
             android:name=".Admin.Delete"
             android:exported="false" />
         <activity
             android:name=".User.userMain"
-            android:exported="true">
-
-
-        </activity>
+            android:exported="true" />
         <activity
             android:name=".User.startUser"
             android:exported="false" />
@@ -28,13 +28,12 @@
             android:exported="false" />
         <activity
             android:name=".Admin.MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
 
         <meta-data
