--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,9 +46,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:30.4.1')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-
-
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.airbnb.android:lottie:4.2.2'
 
 
 }
