--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.myapplication" >
+    package="com.example.myapplication">
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/zonepark_asset"
         android:label="ZonePark"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyApplication" >
+        android:theme="@style/Theme.MyApplication">
+        <activity
+            android:name=".Admin.MainActivity"
+            android:exported="false" />
         <activity
             android:name=".User.Mall_page"
             android:exported="false" />
@@ -18,17 +21,17 @@
             android:name=".User.userMain"
             android:exported="true" />
         <activity
-            android:name=".User.startUser"
+            android:name=".SplashActivity"
             android:exported="false" />
         <activity
-            android:name=".Admin.cities"
+            android:name=".User.startUser"
             android:exported="false" />
         <activity
             android:name=".Admin.register"
             android:exported="false" />
         <activity
-            android:name=".Admin.MainActivity"
-            android:exported="true" >
+            android:name=".Admin.cities"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
