--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Capture"
+            android:screenOrientation="portrait"
+            android:theme="@style/zxing_CaptureTheme"/>
+
+
 
         <meta-data
             android:name="preloaded_fonts"
