--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,14 @@ dependencies {
     implementation 'com.airbnb.android:lottie:4.2.2'
     implementation 'com.orhanobut:dialogplus:1.11@aar'
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+    implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'com.intuit.ssp:ssp-android:1.0.6'
+
+
+
+
+
+
 
 
 
